--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,63 @@
-body{
-	margin: 0 auto;
-	background: #1f8dd6;
-	text-align: center;
+body {
+    margin: 0 auto;
+    background: #1f8dd6;
+    text-align: center;
 }
-
-.top-panel{
-	position: fixed;
-	width: 100%;
-	height: 45px;
-	background: #2d3e50;
-	text-align: center;
-	font-style: oblique;
-	font-size: 24pt;
-	color: #fff;
-	margin-bottom: 50px;
+.top-panel {
+    position: fixed;
+    width: 100%;
+    height: 45px;
+    background: #2d3e50;
+    text-align: center;
+    font-style: oblique;
+    font-size: 24pt;
+    color: #fff;
+    margin-bottom: 50px;
 }
-
-.box{
-	margin: 0 auto;
-	width: 80%;
-	padding: 20px;
+.box {
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px;
 }
-
-.promo-text{
-	color: #fff;
-	font-size: 20pt;
+.result-box {
+    width: 80%;
+    padding: 20px;
 }
-
-#editor{
-	background: #151515;
-	color: #fff;
-	font-size: 18pt;
-	width: 90%;
-	height: 90%;
-	overflow: scroll;
-	overflow: -moz-scrollbars-none;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	padding: 20px;
-	margin: 0 auto;
+.promo-text {
+    color: #fff;
+    font-size: 20pt;
 }
-
-#editor::-webkit-scrollbar{
-	width: 0 !important;
+#editor {
+    background: #151515;
+    color: #fff;
+    font-size: 18pt;
+    width: 90%;
+    height: 90%;
+    overflow: scroll;
+    overflow: -moz-scrollbars-none;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 0 auto;
 }
-
-.result{
-	background: #353535;
-	color: #fff;
-	font-size: 18pt;
-	width: 90%;
-	height: 20%;
-	overflow: scroll;
-	overflow: -moz-scrollbars-none;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	padding: 20px;
-	margin: 0 auto;
+#editor::-webkit-scrollbar {
+    width: 0 !important;
+}
+#result {
+    text-align: left;
+}
+.result {
+    background: #353535;
+    color: #fff;
+    font-size: 18pt;
+    width: 90%;
+    height: 20%;
+    overflow: scroll;
+    overflow: -moz-scrollbars-none;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 0 auto;
 }
