--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
-    margin: 0 auto;
+    margin: 0px;
+    padding: 0px;
     background: #1f8dd6;
     text-align: center;
+    height: 100%;
 }
 .top-panel {
     position: fixed;
@@ -18,21 +20,23 @@ body {
     margin: 0 auto;
     width: 95%;
     padding: 20px;
+    height: 80%;
 }
 .result-box {
     width: 95%;
     padding: 20px;
+    height: 80%;
 }
 .promo-text {
     color: #fff;
     font-size: 20pt;
 }
 #editor {
-    background: #151515;
+    background: #353535;
     color: #fff;
     font-size: 18pt;
     width: 40%;
-    height: auto;
+    height: 400px;
     overflow: scroll;
     overflow: -moz-scrollbars-none;
     -webkit-border-radius: 10px;
@@ -41,15 +45,17 @@ body {
     padding: 20px;
     margin: 0 auto;
     display: inline-block;
+    text-align: left;
 }
 #editor::-webkit-scrollbar {
     width: 0 !important;
 }
-#result{
+#result {
     background: #353535;
     color: #fff;
     font-size: 18pt;
     width: 40%;
+    height: 400px;
     overflow: scroll;
     overflow: -moz-scrollbars-none;
     -webkit-border-radius: 10px;
