--- a/css/default.css
+++ b/css/default.css
@@ -1,15 +1,28 @@
 .examjs-help-popup {
     position: relative;
     cursor: pointer;
-
 }
-
-.examjs-help-popup:before{
+.examjs-help-popup:before {
     display: block;
     position: absolute;
     width: 200px;
-    background-color: rgba(0,0,0,.85);
+    text-align: center;
+    font-size: .8em;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .85);
     bottom: 30px;
     left: 50%;
+    margin-left: -100px;
+    padding: 10px;
     content: attr(data-help);
-    }
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    opacity: 0;
+}
+.examjs-help-popup:hover:before {
+    opacity: 1;
+}
