--- a/css/default.css
+++ b/css/default.css
@@ -2,16 +2,25 @@
     position: relative;
     cursor: pointer;
 }
-.examjs-help-popup:before {
+.examjs-help-popup:before,
+.examjs-help-popup:after {
     display: block;
     position: absolute;
+    visibility: hidden;
+    opacity: 0;
+    margin-bottom: 15px;
+    -webkit-transition: opacity: .7s, margin-bottom .7s;
+    -moz-transition: opacity: .7s, margin-bottom .7s;
+    transition: opacity: .7s, margin-bottom .7s;
+    left: 50%;
+}
+.examjs-help-popup:before {
     width: 200px;
     text-align: center;
     font-size: .8em;
     color: #fff;
     background-color: rgba(0, 0, 0, .85);
     bottom: 30px;
-    left: 50%;
     margin-left: -100px;
     padding: 10px;
     content: attr(data-help);
@@ -21,8 +30,18 @@
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    opacity: 0;
 }
-.examjs-help-popup:hover:before {
+.examjs-help-popup:after {
+    content: "";
+    border-top: 10px solid rgba(0,0,0,.85);
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    bottom: 20px;
+    margin-left: -10px;
+}
+.examjs-help-popup:hover:before,
+.examjs-help-popup:hover:after{
     opacity: 1;
+    visibility: visible;
+    margin-bottom: 0;
 }
