--- a/css/default.css
+++ b/css/default.css
@@ -18,8 +18,8 @@
     width: 200px;
     text-align: center;
     font-size: .8em;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .85);
+    color: #252525;
+    background-color: rgba(255, 255, 255, .85);
     bottom: 30px;
     margin-left: -100px;
     padding: 10px;
@@ -33,7 +33,7 @@
 }
 .examjs-help-popup:after {
     content: "";
-    border-top: 10px solid rgba(0,0,0,.85);
+    border-top: 10px solid rgba(255,255,255,.85);
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     bottom: 20px;
