--- a/css/default.css
+++ b/css/default.css
@@ -3,6 +3,7 @@
     display: inline-block;
     background-color: #fff;
     text-align: center;
+    margin-right: 5px;
     width: 20px;
     height: 20px;
     text-size: .6px;
@@ -62,6 +63,8 @@
     text-align: center;
 }
 .examjs-input {
+    margin-left: 5px;
+    margin-right: 5px;
     outline: 0;
     border: 0;
     font-size: .8em;
