--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,14 @@ body {
     color: #fff;
     margin-bottom: 50px;
 }
-.box {
+.button {
+    margin: 0 auto;
+    width: 150px;
+    height: 50px;
+    font-size: 2em;
+    background: #109595;
+    color: #fff;
+    } .box {
     margin: 0 auto;
     width: 95%;
     padding: 20px;
