--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,28 @@ body {
     width: 150px;
     height: 50px;
     font-size: 2em;
-    background: #109595;
+    background: #ff4c4c;
     color: #fff;
-    } .box {
+}
+.box {
     margin: 0 auto;
     width: 95%;
     padding: 20px;
     height: 80%;
+}
+.answers-box {
+    width: 15%;
+    height: 50px;
+    margin: 0 auto;
+    padding: 10px;
+    background: #353535;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 2em;
+    color: #fff;
+}
+.counter {
+    display: inline-block;
 }
 .result-box {
     width: 95%;
