--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     height: 80%;
 }
 .answers-box {
-    width: 15%;
+    min-width: 15%;
     height: 50px;
     margin: 0 auto;
     padding: 10px;
