--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,8 @@ body {
 }
 .answers-box {
     min-width: 15%;
-    height: 50px;
+    height: 80px;
     margin: 0 auto;
-    padding: 10px;
     background: #353535;
     text-align: center;
     vertical-align: middle;
@@ -43,6 +42,7 @@ body {
 }
 .counter {
     display: inline-block;
+    margin: 20px;
 }
 .result-box {
     width: 95%;
