--- a/css/exam.css
+++ b/css/exam.css
@@ -70,7 +70,7 @@
     vertical-align: middle;
     text-align: left;
 }
-.examjs-input {
+.exam-js-input {
     margin-left: 5px;
     margin-right: 5px;
     outline: 0;
