--- a/css/exam.css
+++ b/css/exam.css
@@ -1,65 +1,3 @@
-.examjs-help-popup {
-  position: relative;
-  display: inline-block;
-  background-color: #fff;
-  text-align: center;
-  margin-right: 5px;
-  width: 20px;
-  height: 20px;
-  text-size: .6px;
-  bottom: -5px;
-  color: #252525;
-  cursor: pointer;
-  padding: 3px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-.examjs-help-popup:before,
-.examjs-help-popup:after {
-  display: block;
-  position: absolute;
-  visibility: hidden;
-  opacity: 0;
-  margin-bottom: 15px;
-  left: 50%;
-  -webkit-transition: opacity .7s, margin-bottom .7s;
-  -moz-transition: opacity .7s, margin-bottom .7s;
-  transition: opacity .7s, margin-bottom .7s;
-}
-.examjs-help-popup:before {
-  width: 200px;
-  text-align: center;
-  font-size: .8em;
-  color: #252525;
-  background-color: rgba(255, 255, 255, .95);
-  bottom: 30px;
-  margin-left: -100px;
-  padding: 10px;
-  content: attr(data-help);
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-.examjs-help-popup:after {
-  content: "";
-  border-top: 10px solid rgba(255, 255, 255, .95);
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  bottom: 20px;
-  margin-left: -10px;
-}
-.examjs-help-popup:hover:before,
-.examjs-help-popup:hover:after {
-  opacity: 1;
-  visibility: visible;
-  margin-bottom: 0;
-  z-index: 10;
-  position: absolute;
-}
 .examjs-block {
   display: inline-block;
   vertical-align: top;
@@ -76,12 +14,10 @@
   margin-left: 5px;
   margin-right: 5px;
   outline: 0;
-  display: inline;
   border: 0;
   font-size: .8em;
-  color: #fff;
-  background: rgba(0, 0, 0, 0);
   border-bottom: solid 1px;
+  vertical-align: top;
 }
 .exam-js-input:focus {
   outline: 0;
@@ -89,8 +25,6 @@
 .exam-js-img {
   max-width: 250px;
   background-color: #fff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
   border-radius: 5px;
   margin: 10px;
   padding: 5px;
@@ -99,7 +33,8 @@
   top: 10px;
 }
 .exam-js-img-question {
-  display: inline;
+  display: inline-block;
+  vertical-align: top;
 }
 .exam-js-video-answer {
   background-color: #1B1B1B;
@@ -109,15 +44,24 @@
   margin-bottom: 10px;
 }
 .exam-js-media-question {
-  display: inline;
-  margin: 5px;
+  display: inline-block;
+  margin: 10px;
+  min-height: 50px;
 }
 .exam-js-text-checkbox {
   display: inline;
   margin-left: 25px;
 }
 .exam-js-answer {
-  display: inline;
+  display: inline-block;
   margin-left: 25px;
+}
+.exam-js-answer-container{
+  margin-top: 20px;
+  display: inline-block;
+}
+.exam-js-answer-number{
+  display: inline-block;
+  vertical-align: top;
 }
 
