chnage site style

--- a/css/style.css
+++ b/css/style.css
@@ -6,43 +6,76 @@ body {
   background-color: #009989;
   height: 100%;
 }
-pre{
+
+pre {
   font-size: 0.8em;
   background-color: #434d53;
   border: 1px dashed #fff;
   color: #fffbf7;
   padding: 0.6em;
 }
-.service-buttons a:link{
+
+@font-face {
+  font-family: "chalk";
+  src: url(../font/chalk.ttf) format("truetype");
+}
+
+.service-buttons{
+  margin-top: 80px;
+}
+
+.service-buttons a:link {
   color: #009989;
 }
-.service-buttons a:visited{
+
+.service-buttons a:visited {
   color: #009989;
 }
-.service-buttons a:hover{
+
+.service-buttons a:hover {
   color: #009989;
 }
-.service-buttons a:active{
+
+.service-buttons a:active {
   color: #009989;
 }
+
+.title {
+  margin-bottom: 55px;
+  margin-top: -55px;
+  font-family: "chalk";
+  font-size: 88px;
+}
+
+.logo {
+  width: 300px;
+}
+
 a:link {
   color: #fbfcd0;
 }
+
+
 /* visited link */
 
 a:visited {
   color: #fbfcd0;
 }
+
+
 /* mouse over link */
 
 a:hover {
   color: #e1e2bb;
 }
+
+
 /* selected link */
 
 a:active {
   color: #e1e2bb;
 }
+
 .promo {
   width: 80%;
   height: 35vh;
@@ -51,16 +84,19 @@ a:active {
   font-size: 24pt;
   display: table;
 }
+
 .promo-content {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
+
 .box {
   margin: 0 auto;
   width: 95%;
   padding: 20px;
 }
+
 .answers-box {
   position: fixed;
   height: 40px;
@@ -70,19 +106,23 @@ a:active {
   font-size: 1.3em;
   color: #fffbf7;
 }
+
 .answers-box-content {
   height: 100%;
   text-align: center;
   vertical-align: middle;
   display: table-cell;
 }
+
 .counter {
   display: inline-block;
 }
+
 .text-pane {
   font-size: 16pt;
   width: 45%;
   height: 87vh;
+  margin-top: 50px;
   overflow: auto;
   overflow: -moz-scrollbars-none;
   padding: 20px;
@@ -94,33 +134,46 @@ a:active {
   border: none;
   outline: none;
 }
+
 .text-pane-left {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
 .text-pane-right {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+
 .text-pane a:link {
   color: #00897b;
 }
+
+
 /* visited link */
 
 .text-pane a:visited {
   color: #00897b;
 }
+
+
 /* mouse over link */
 
 .text-pane a:hover {
   color: #006b5f;
 }
+
+
 /* selected link */
 
 .text-pane a:active {
   color: #006b5f;
 }
+
 .text-pane::-webkit-scrollbar {
   width: 0 !important;
 }
 
+.promo-text {
+  margin: 25px;
+}
